--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -28,7 +28,7 @@
 				color: #D7D7D7;
 				margin-top: 10px;
 			}
-			
+
 			.ellipsis-show {
 				/*内容*/
 				display: -webkit-box;
@@ -39,17 +39,17 @@
 				-webkit-line-clamp: inherit;
 				-webkit-box-orient: vertical;
 			}
-			
+
 			.mui-table-view-cell,
 			.mui-table-view-cell:active {
 				background-color: #FFFFFF;
 			}
-			
+
 			.mui-table-view {
-				background: transparent;
+				background: white;
 				/*背景色透明*/
 			}
-			
+
 			.mui-table-view-cell {
 				background: white;
 				/*cell 背景设为白色*/
@@ -57,43 +57,43 @@
 				/*内边距为0*/
 				margin-bottom: 10px;
 			}
-			
+
 			.mui-table-view:before,
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
 				/*去掉横线*/
 			}
-			
+
 			.mui-table-view-cell {
 				background-color: #fff;
 				margin-top: 1rem;
 			}
-			
+
 			.mui-row-padding-8px {
 				padding: 8px;
 				/*内边距为8px*/
 				padding: 12px;
 			}
-			
+
 			.dynamic-personal-image {
 				/*个人头像圆形*/
 				border-radius: 50%;
 				width: 50px;
 				height: 50px;
 			}
-			
+
 			.dynamic-image-div {
 				/*内容中图片之间的内边距*/
 				padding: 1px;
 			}
-			
+
 			.dynamic-image {
 				/*内容的图片占全部空间*/
 				width: 100%;
 				height: 100%;
 			}
-			
+
 			.dynamic-icon,
 			.dynamic-icon-praise,
 			.dynamic-icon-comment,
@@ -103,13 +103,13 @@
 				width: 30px;
 				margin-left: 25px;
 			}
-			
+
 			.dynamic-icon-Level {
 				/*等级图标*/
 				height: 20px;
 				margin-left: 10px;
 			}
-			
+
 			.dynamic-icon-praise-small {
 				/*点赞列表的小图标*/
 				height: 15px;
@@ -117,38 +117,38 @@
 				margin-right: 5px;
 				margin-bottom: 0px;
 			}
-			
+
 			.dynamic-margin-top-10px {
 				margin-top: 10px;
 			}
-			
+
 			.dynamic-padding-left-10px {
 				padding-left: 10px;
 			}
-			
+
 			.dynamic-line {
 				/*点赞列表上面的横线*/
 				height: 1px;
 				width: 100%;
 				background: #e4e4e4;
 			}
-			
+
 			.dynamic-contenttext {
 				/*动态内容*/
 				font-family: '微软雅黑 Regular', '微软雅黑';
 				/*字体样式*/
 			}
-			
+
 			.dynamic-praise-name,
 			.dynamic-comment-name {
 				/*点赞者和评论者的名字*/
 				color: #1277C7;
 			}
-			
+
 			.replyComment {
 				padding-top: 5px;
 			}
-			
+
 			.dynamic-comment-btn {
 				/*底部的评论按钮*/
 				width: 100%;
@@ -156,7 +156,7 @@
 				border-width: 1px;
 				border-color: #e4e4e4;
 			}
-			
+
 			.dynamic-image-more {
 				/*更多图片*/
 				position: absolute;
