0005260: 作业详情已完成下方头像文字需要居中

--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -25,7 +25,7 @@
 				height: 0px;
 				/*去掉横线
 		}*/
-			
+
 			.ellipsis-show {
 				/*内容*/
 				display: -webkit-box;
@@ -36,22 +36,27 @@
 				-webkit-line-clamp: inherit;
 				-webkit-box-orient: vertical;
 			}
-			
+
 			#showAll {
 				display: none;
 				color: #D7D7D7;
 				margin-top: 10px;
 			}
-			
+
 			.homework-img {
 				padding: 0 3px;
 			}
-			
+
 			.dynamic-personal-image {
 				/*个人头像圆形*/
 				border-radius: 50%;
 				width: 50px;
 				height: 50px;
+			}
+
+			#finished-list .mui-media-body {
+				/*已完成头像文字垂直居中*/
+				line-height: 50px;
 			}
 		</style>
 
