--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -239,16 +239,18 @@
 					flagRef = 1;
 					if(pageIndex <= totalPageCount) {
 						getAsksByUser(ExpertsInfo.UserId);
+						setTimeout(function() {
+							//结束下拉刷新
+							self.endPullUpToRefresh();
+							if(mui(".mui-table-view-cell").length < 10) {
+								mui(".mui-pull-loading")[0].innerHTML = "";
+							}
+						}, 1000);
 					} else {
-						mui.toast('没有更多了');
-					}
-					setTimeout(function() {
 						//结束下拉刷新
 						self.endPullUpToRefresh();
-						if(mui(".mui-table-view-cell").length < 10) {
-							mui(".mui-pull-loading")[0].innerHTML = "";
-						}
-					}, 1000);
+						mui(".mui-pull-loading")[0].innerHTML = "没有更多了";
+					}
 				}
 			}
 		});
