--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -154,73 +154,6 @@
 					console.log('333333');
 					clearData();
 				}
-
-				//设置里面修改密码
-				//				window.addEventListener('changePasswords', function() {
-				//					console.log('111111');
-				//					document.getElementById('cancelBtn').style.display = 'none';
-				//					back.style.display = 'inline-block';
-				//					unickName0.style.display = 'none';
-				//					//个人信息
-				//					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-				//					//如果有昵称，则不显示
-				//					if(personal.ispw == 1) { //有密码
-				//						oldPassword.style.display = 'block';
-				//					} else {
-				//						oldPassword.style.display = 'none';
-				//					}
-				//					password0div.style.display = 'block';
-				//					password1div.style.display = 'block';
-				//					tempFlag = 1;
-				//					navTitle.innerHTML = '修改密码';
-				//					modifypasswordBtn.innerHTML = '修改密码';
-				//					clearData();
-				//				});
-				//设置里面退出时设置密码
-				//				window.addEventListener('settingPW', function() {
-				//					back.style.display = 'inline-block';
-				//					tempFlag = 3;
-				//					navTitle.innerHTML = '设置密码';
-				//					unickName.style.display = 'block';
-				//					oldPassword.style.display = 'none';
-				//					document.getElementById('cancelBtn').style.display = 'none';
-				//					modifypasswordBtn.innerHTML = '设置密码';
-				//					//个人信息
-				//					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-				//					//如果有昵称，则不显示
-				//					if(personal.unick.length > 0) {
-				//						unickName0.style.display = 'none';
-				//					} else {
-				//						unickName0.style.display = 'block';
-				//					}
-				//					console.log('333333');
-				//					clearData();
-				//				});
-
-				//从验证码界面登录或者注册时
-				//				window.addEventListener('registerPW', function() {
-				//					back.style.display = 'none';
-				//					tempFlag = 2;
-				//					navTitle.innerHTML = '设置密码';
-				//					unickName0.style.display = 'block';
-				//					unickName.style.display = 'block';
-				//					oldPassword.style.display = 'none';
-				//					document.getElementById('cancelBtn').style.display = 'inline-block';
-				//					modifypasswordBtn.innerHTML = '完成';
-				//					console.log('22222');
-				//					clearData();
-				//				});
-				//上级传值如果是1，是修改密码
-				//				if(curPage.data&&curPage.data==1){
-				//					oldPassword.style.display='block';
-				//					document.getElementById('cancelBtn').style.display='none';
-				//					back.style.display='inline-block';
-				//				//设置密码
-				//				}else{
-				//					oldPassword.style.display='none';
-				//					document.getElementById('cancelBtn').style.display='inline-block';
-				//					back.style.display='none';
-				//				}
 				//点击修改密码方法
 				events.addTap('modifypassword', function() {
 					document.activeElement.blur();
@@ -338,8 +271,14 @@
 									}
 								});
 							} else if(tempFlag == 1) { //修改密码，需要原先密码
-								comData.vtp = 'rp'; //np(新建密码),rp(修改密码)
-
+								//个人信息
+								var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+								//如果有密码，则不显示
+								if(personal.ispw == 1) { //有密码
+									comData.vtp = 'rp'; //np(新建密码),rp(修改密码)
+								} else {
+									comData.vtp = 'np'; //np(新建密码),rp(修改密码)
+								}
 							}
 							console.log('comData:' + JSON.stringify(comData));
 							console.log('enData:' + JSON.stringify(enData));
