--- a/JiaoBaoYun-hb/html/utils/refreshTest.html
+++ b/JiaoBaoYun-hb/html/utils/refreshTest.html
@@ -88,16 +88,18 @@
 							if(pageIndex <= totalPageCount) {
 								//24.获取某个用户的回答列表
 								getAnswersByUser(ExpertsInfo.UserId);
+								setTimeout(function() {
+									//结束下拉刷新
+									self.endPullUpToRefresh();
+									if(mui(".mui-table-view-cell").length < 10) {
+										mui(".mui-pull-loading")[0].innerHTML = "";
+									}
+								}, 1000);
 							} else {
-								mui.toast('没有更多了');
-							}
-							setTimeout(function() {
 								//结束下拉刷新
 								self.endPullUpToRefresh();
-								if(mui(".mui-table-view-cell").length < 10) {
-									mui(".mui-pull-loading")[0].innerHTML = "";
-								}
-							}, 1000);
+								mui(".mui-pull-loading")[0].innerHTML = "没有更多了";
+							}
 						}
 					}
 				});
@@ -129,6 +131,9 @@
 							answerArray = answerArray.concat(data.RspData.Data);
 						}
 						setAnswerRecord(data.RspData.Data);
+						if(mui(".mui-table-view-cell").length < 10) {
+							mui(".mui-pull-loading")[0].innerHTML = "";
+						}
 					} else {
 						mui.toast(data.RspTxt);
 					}
