--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -27,6 +27,7 @@
 				font-size: 1.3rem;
 				color: #B7B7B7;
 			}
+			
 			.mui-table h4,
 			.mui-table h5,
 			.mui-table .mui-h5,
@@ -35,7 +36,6 @@
 				margin-top: 0;
 				padding-left: 10px;
 			}
-			
 			/*问题*/
 			
 			.mui-table h4 {
@@ -211,16 +211,18 @@
 							if(pageIndex <= totalPageCount) {
 								//24.获取某个用户的回答列表
 								getAnswersByUser(ExpertsInfo.UserId);
+								setTimeout(function() {
+									//结束下拉刷新
+									self.endPullUpToRefresh();
+									if(mui(".mui-table-view-cell").length < 10) {
+										mui(".mui-pull-loading")[0].innerHTML = "";
+									}
+								}, 1000);
 							} else {
-								mui.toast('没有更多了');
-							}
-							setTimeout(function() {
 								//结束下拉刷新
 								self.endPullUpToRefresh();
-								if(mui(".mui-table-view-cell").length < 10) {
-									mui(".mui-pull-loading")[0].innerHTML = "";
-								}
-							}, 1000);
+								mui(".mui-pull-loading")[0].innerHTML = "没有更多了";
+							}
 						}
 					}
 				});
@@ -249,7 +251,7 @@
 							//清除节点
 							document.getElementById('list-container').innerHTML = "";
 							answerArray = data.RspData.Data;
-							if (data.RspData.Data.length==0) {
+							if(data.RspData.Data.length == 0) {
 								mui.toast('没有数据');
 							}
 						} else { //加载更多
