--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -26,7 +26,7 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label style="font-size: 15px;">手机号</label>
-					<input type="text" id="phoneNumber" placeholder="请输入手机号 ">
+					<input type="number" id="phoneNumber" placeholder="请输入手机号 ">
 				</div>
 			</form>
 			<div class="mui-content-padded">
