--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -116,14 +116,14 @@
 
 					console.log('click position:' + this.getAttribute('position'))
 					console.log("系统名称：" + plus.os.name);
-					switch(parseInt(this.getAttribute('position'))) {
-						case 0:
-						case 1:
-						case 2:
-						case 3:
-						case 4:
-						case 6:
-						case 7:
+//					switch(parseInt(this.getAttribute('position'))) {
+//						case 0:
+//						case 1:
+//						case 2:
+//						case 3:
+//						case 4:
+//						case 6:
+//						case 7:
 							if(plus.os.name == 'Android') {
 								setTimeout(function() {
 									closeMenu();
@@ -131,10 +131,10 @@
 							} else {
 								closeMenu();
 							}
-							break;
-						default:
-							break;
-					}
+//							break;
+//						default:
+//							break;
+//					}
 
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
@@ -166,6 +166,7 @@
 							//积分
 						case 5:
 							mui.toast('积分功能暂未开放！');
+							events.openNewWindow('/html/check/check-news.html');
 							break;
 							//设置
 						case 6:
