--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -64,7 +64,7 @@
 				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 5px;width: 300px;background-color: #00a5e0;border-color:#00a5e0 ;">一键提醒</button>
 			</div>
 		</nav>
-		<div class="mui-content mui-scroll-wrapper">
+		<div class="mui-content mui-scroll-wrapper" style="background-color: white;">
 			<div class="mui-scroll">
 				<ul class="mui-table-view">
 					<li class="mui-table-view-cell mui-media ">
