--- a/JiaoBaoYun-hb/html/quan/leaveNew.html
+++ b/JiaoBaoYun-hb/html/quan/leaveNew.html
@@ -98,7 +98,7 @@
 			}
 			
 			.mui-table-view-cell {
-				background: #E4E4E4;
+				background: #eaeaea;
 				/*cell 背景设为白色*/
 				/*padding: 0;*/
 				/*内边距为0*/
