--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -40,13 +40,13 @@
 				-webkit-box-orient: vertical;
 			}
 
-			.mui-table-view-cell,
+			
 			.mui-table-view-cell:active {
 				background-color: #FFFFFF;
 			}
 
 			.mui-table-view {
-				background: white;
+				background: #EFEFF4;
 				/*背景色透明*/
 			}
 
