增加查看视频

--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -42,7 +42,7 @@
 
 			.mui-checkbox input[type=checkbox]:checked:before,
 			.mui-radio input[type=radio]:checked:before {
-				color: #86BE49;
+				color: #1db8f1;
 			}
 
 			.mui-col-sm-4,
